# ecc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  ecc.cxx  include.h  jacc.cxx  res.rc
ast/: CMakeLists.txt  astbuilder.cxx  astbuilder.h  astsym.h  context.cxx  context.h  declaration.cxx  declaration.h  env.cxx  env.h  errtoken.cxx  errtoken.h  expression.cxx  expression.h  extdefinitions.cxx  firstfollowdef.h  function.cxx  function.h  ppastbuilder.cxx  ppastbuilder.h  semanticinf.cxx  semanticinf.h  statements.h  symbols.cxx  symbols.h  type.cxx  type.h  typename.h  value.cxx  value.h
bytecode/: CMakeLists.txt
codeg/: CMakeLists.txt
common/: CMakeLists.txt  console.cxx  console.h  defines.h  encoding.h  exception.cxx  exception.h  flag.h  flread.cxx  flread.h  md5.cxx  md5.h  observe.cxx  observe.h  obsevent.h  ptrdef.h  srcmgr.cxx  srcmgr.h
doc/: dd.bpb  dd.bpm  jacc_objectDiagram.oom
include/: defines.h  include.h  rang.hpp
include/llvm/Config/: config.h  llvm-config.h
lex/: CMakeLists.txt  imlex.cxx  imlex.h  interfaces.h  lex.cxx  lex.h  pplex.cxx  pplex.h  tags.h  token.cxx  token.h
parse/: CMakeLists.txt  ifparser.cxx  ifparser.h  parser.cxx  parser.h  ppcond.h  ppparser.cxx  ppparser.h
preproc/: CMakeLists.txt  lex.h
proc/: CMakeLists.txt  lex.cxx  lex.h  tags.h  token.cxx  token.h
resources/: res.rc
src/ast/: CMakeLists.txt  astbuilder.cxx  astbuilder.h  astsym.h  declaration.cxx  declaration.h  env.cxx  env.h  expression.cxx  expression.h  extdefinitions.cxx  extdefinitions.h  firstfollowdef.h  irutils.cxx  irutils.h  ppastbuilder.cxx  ppastbuilder.h  statements.cxx  statements.h  symbols.cxx  symbols.h  type.cxx  type.h  typename.cxx  util.cxx  util.h  value.cxx
src/bytecode/: CMakeLists.txt
src/codeg/: CMakeLists.txt
src/common/: CMakeLists.txt  console.cxx  console.h  cxxutils.h  debug.h  defines.h  encoding.h  exception.cxx  exception.h  flag.h  flread.cxx  flread.h  md5.cxx  md5.h  observe.cxx  observe.h  obsevent.h  ptrdef.h  srcmgr.cxx  srcmgr.h
src/lex/: CMakeLists.txt  imlex.cxx  imlex.h  lex.cxx  lex.h  pplex.cxx  pplex.h  tags.h  token.cxx  token.h
src/parse/: CMakeLists.txt  ifparser.cxx  ifparser.h  parser.cxx  parser.h  ppcond.h  ppparser.cxx  ppparser.h
src/startup/: CMakeLists.txt  argmgr.cxx  argmgr.h  ecc.cxx  feature.cxx  feature.h
src/test/: CMakeLists.txt  test_hash_code.cxx  unit_test.cxx
test/: CMakeLists.txt  test_hash_code.cxx  test_preprocessor.cxx  unit_test.cxx
vm/: CMakeLists.txt  Heap.cxx  Heap.h  ISA.cxx  ISA.h  Instruction.cxx  Instruction.h  InstructionBuilder.cxx  InstructionBuilder.h  MemoryMap.cxx  MemoryMap.h  Register.cxx  Register.h  Stack.cxx  Stack.h  VMInstance.cxx  VMInstance.h
